# oca-ocb-test

./: README.md
odoo-bringout-oca-ocb-test_base_automation/: README.md  pyproject.toml
odoo-bringout-oca-ocb-test_base_automation/doc/: ARCHITECTURE.md  CONFIGURATION.md  FAQ.md  INSTALL.md  MODELS.md  OVERVIEW.md  SECURITY.md  USAGE.md
odoo-bringout-oca-ocb-test_crm_full/: README.md  pyproject.toml
odoo-bringout-oca-ocb-test_crm_full/doc/: ARCHITECTURE.md  CONFIGURATION.md  DEPENDENCIES.md  FAQ.md  INSTALL.md  MODELS.md  OVERVIEW.md  USAGE.md
odoo-bringout-oca-ocb-test_discuss_full/: README.md  pyproject.toml
odoo-bringout-oca-ocb-test_discuss_full/doc/: ARCHITECTURE.md  CONFIGURATION.md  DEPENDENCIES.md  FAQ.md  INSTALL.md  MODELS.md  OVERVIEW.md  USAGE.md
odoo-bringout-oca-ocb-test_event_full/: README.md  pyproject.toml
odoo-bringout-oca-ocb-test_event_full/doc/: ARCHITECTURE.md  CONFIGURATION.md  DEPENDENCIES.md  FAQ.md  INSTALL.md  MODELS.md  OVERVIEW.md  USAGE.md
odoo-bringout-oca-ocb-test_mail/: README.md  pyproject.toml
odoo-bringout-oca-ocb-test_mail/doc/: ARCHITECTURE.md  CONFIGURATION.md  DEPENDENCIES.md  FAQ.md  INSTALL.md  MODELS.md  OVERVIEW.md  SECURITY.md  USAGE.md
odoo-bringout-oca-ocb-test_mail_full/: README.md  pyproject.toml
odoo-bringout-oca-ocb-test_mail_full/doc/: ARCHITECTURE.md  CONFIGURATION.md  DEPENDENCIES.md  FAQ.md  INSTALL.md  MODELS.md  OVERVIEW.md  SECURITY.md  USAGE.md
odoo-bringout-oca-ocb-test_mail_full/test_mail_full/i18n/: bs.po
odoo-bringout-oca-ocb-test_resource/: README.md  pyproject.toml
odoo-bringout-oca-ocb-test_resource/doc/: ARCHITECTURE.md  CONFIGURATION.md  DEPENDENCIES.md  FAQ.md  INSTALL.md  MODELS.md  OVERVIEW.md  SECURITY.md  USAGE.md
odoo-bringout-oca-ocb-test_website/: README.md  pyproject.toml
odoo-bringout-oca-ocb-test_website/doc/: ARCHITECTURE.md  CONFIGURATION.md  DEPENDENCIES.md  FAQ.md  INSTALL.md  MODELS.md  OVERVIEW.md  SECURITY.md  USAGE.md
odoo-bringout-oca-ocb-test_website_modules/: README.md  pyproject.toml
odoo-bringout-oca-ocb-test_website_modules/doc/: ARCHITECTURE.md  CONFIGURATION.md  DEPENDENCIES.md  FAQ.md  INSTALL.md  MODELS.md  OVERVIEW.md  USAGE.md
odoo-bringout-oca-ocb-test_website_slides_full/: README.md  pyproject.toml
odoo-bringout-oca-ocb-test_website_slides_full/doc/: ARCHITECTURE.md  CONFIGURATION.md  DEPENDENCIES.md  FAQ.md  INSTALL.md  MODELS.md  OVERVIEW.md  USAGE.md
odoo-bringout-oca-ocb-test_xlsx_export/: README.md  pyproject.toml
odoo-bringout-oca-ocb-test_xlsx_export/doc/: ARCHITECTURE.md  CONFIGURATION.md  DEPENDENCIES.md  FAQ.md  INSTALL.md  MODELS.md  OVERVIEW.md  USAGE.md
