[project]
name = "odoo-bringout-oca-ocb-test_event_full"
version = "16.0.0"
description = "Test Full Event Flow - Odoo addon"
authors = [
    { name = "Ernad Husremovic", email = "hernad@bring.out.ba" }
]
dependencies = [
    "odoo-bringout-oca-ocb-event>=16.0.0",
    "odoo-bringout-oca-ocb-event_booth>=16.0.0",
    "odoo-bringout-oca-ocb-event_crm>=16.0.0",
    "odoo-bringout-oca-ocb-event_crm_sale>=16.0.0",
    "odoo-bringout-oca-ocb-event_sale>=16.0.0",
    "odoo-bringout-oca-ocb-event_sms>=16.0.0",
    "odoo-bringout-oca-ocb-payment_demo>=16.0.0",
    "odoo-bringout-oca-ocb-website_event_booth_sale_exhibitor>=16.0.0",
    "odoo-bringout-oca-ocb-website_event_crm_questions>=16.0.0",
    "odoo-bringout-oca-ocb-website_event_exhibitor>=16.0.0",
    "odoo-bringout-oca-ocb-website_event_questions>=16.0.0",
    "odoo-bringout-oca-ocb-website_event_meet>=16.0.0",
    "odoo-bringout-oca-ocb-website_event_sale>=16.0.0",
    "odoo-bringout-oca-ocb-website_event_track>=16.0.0",
    "odoo-bringout-oca-ocb-website_event_track_live>=16.0.0",
    "odoo-bringout-oca-ocb-website_event_track_quiz>=16.0.0",
    "requests>=2.25.1"
]
readme = "README.md"
requires-python = ">= 3.11"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU Lesser General Public License v3 (LGPLv3)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11", 
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business",
]

[project.urls]
homepage = "https://github.com/bringout/0"
repository = "https://github.com/bringout/0"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["test_event_full"]

[tool.rye]
managed = true
dev-dependencies = [
    "pytest>=8.4.1",
]
